2010-07-22  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/DataServer.pm: Sort files by creation date before
	  queuing them. Fixes bug #3031780.

2010-07-20  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/SNMPServer.pm: Add extended information when saving
	  an SNMP trap to a module.

2010-07-20  Ramon Novoa  <rnovoa@artica.es>

	* pandora_server_installer: Delete the spool/pandora directory
	  if no agent is installed on the same machine.

2010-07-20  Ramon Novoa  <rnovoa@artica.es>

	* pandora_server_installer: Set safer permissions for data_in/conf.

	* util/pandora_db.pl: Fixed the setup password regular expression.
	  Fixes bug #3026997.

2010-07-19  Ramon Novoa  <rnovoa@artica.es>

	* DEBIAN/make_deb_package.sh,
	  pandora_server_installer,
	  pandora_server.spec: Set proper permission for the md5 and
	  collections directories.

2010-07-19  Ramon Novoa  <rnovoa@artica.es>

	* DEBIAN/make_deb_package.sh,
	  pandora_server_installer,
	  pandora_server.spec: Create the collections directory.

2010-07-19  Dario Rodriguez <dario.rodriguez@artica.es>

	* util/tentacle_serverd: Fixed error in filter pattern, changed pattern
	.*\zip to .*\.zip

2010-07-16  Junichi Satoh <junichi@rworks.jp>

	* FreeBSD/pandora_server.conf: Added snmptrapd file path for FreeBSD.

2010-07-14  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/Core.pm
	util/pandora_manage.pl: Added a create incident feature to
	CLI for pending task: 3019638

2010-07-08  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/PluginServer.pm: Quote the command passed to
	  pandora_exec.

	* bin/pandora_exec: Do not verify the command to allow pipes and complex
	  commands.

2010-07-07  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Verify that log4x data is available
	  before trying to read it.

2010-07-06  Dario Rodriguez <dario.rodriguez@artica.es>

	* lib/PandoraFMS/Core.pm, ReconServer.pm, DataServer.pm: Delete 
	$address_id paremeter from function pandora_create_agent()
